--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <!-- Font awesome cdn -->
     <script src="https://kit.fontawesome.com/a926519d4c.js" crossorigin="anonymous"></script>
-    <!-- tailwind css -->
+    <!-- tailwind cdn -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
@@ -20,12 +20,15 @@
               colors: {
                 clifford: '#da373d',
               }
+              fontFamily: {
+                manrope:["Manrope", 'sans-serif'],
+              }
             }
           }
         }
       </script>
 </head>
-<body>
+<body class="font-manrope">
     <!-- Main content -->
      <main class="max-w-screen-xl mx-auto px-16 lg:px-28">
       <!-- Header section -->
@@ -273,7 +276,7 @@
                     </div>
                 </div>
                 <div class="text-center pt-4 mt-4">
-                  <p class="text-sm text-gray-600">© 2027 UIDesign.to - All rights reserved.</p>
+                  <p class="text-sm text-gray-600">© 2027 Ahanaf Design.to - All rights reserved.</p>
                 </div>
             </div>
           </footer>
